2021-10-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha02: Infrastructure';git push
	git tag -a 5.0.3-alpha02 -m 'ppc dgr gbg';git push --tags

	* PPQ: Tidy GBG. CR(GBG) ~ 9% better than DR. CR(Granular DR) ~3% better than GBG.

	* PPQ: DR and GBG pass Zen16 quantization checks, GBG significantly more accurate for NSD=1, otherwise comparable

	* PPQ: Harden quantization guarranty checks, GBG CR ~ DR CR

2021-10-02  Charlie Zender  <zender@uci.edu>

	* PPQ: Use BFB identical constants as DCG19 and code in NCO implementation

	* PPQ: Implement mnt_log10_tbl_prx in full 15-digit double precision for GBG

2021-10-01  Charlie Zender  <zender@uci.edu>

	* PPQ: Convert GBG from digit-based to bit-based, demonstrate viability

2021-09-30  Charlie Zender  <zender@uci.edu>

	* PPQ: Draft GBG from DR granularity, BG treatment of mss_val & 0, BR hshv

2021-09-28  Charlie Zender  <zender@uci.edu>

	* PPQ: change Juan's baa_gbg to baa_brt (Brute Force) and baa_bg2 to baa_gbg (Granular Bit Groom)

	* PPQ: fix <float.h> and promote mnt_log10_tbl to double for MSVC

2021-09-27  Charlie Zender  <zender@uci.edu>

	* PPQ: implement draft Digit Rounding procedure using DCG19 algorithm

	* NCO 5.0.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha01: General Sherman';git push
	git tag -a 5.0.3-alpha01 -m 'ncremap mpi_nbr_usr, E3SMU=SYSTEM, alg_typ=tempest fixes, otherwise functionally identical to 5.0.2';git push --tags

2021-09-26  Charlie Zender  <zender@uci.edu>

	* ncremap add conda create environment hint for MOAB

	* ncremap might add 2&>1 to --devnull to quiet mbconvert output

	* ncremap fix mbconvert options for alg_typ='tempest'

	* ncremap fix false-positive test result due to unquoted mpi_nbr_usr

2021-09-25  Charlie Zender  <zender@uci.edu>

	* ncremap only replace TR with mbtempest if mpi_nbr is set, not	when E3SMU=SYSYEM

2021-09-24  Charlie Zender  <zender@uci.edu>
