@@ -4,6 +4,10 @@
 	cd ~/nco;git commit -a -m 'Version 5.0.3-alpha02: Infrastructure';git push
 	git tag -a 5.0.3-alpha02 -m 'ppc dgr gbg';git push --tags
 
+	* PPQ: Write quantize algorithm-specific attribute names like QuantizeBitGroomNumberOfSignificantDigits
+
+	* PPQ: Implement double-precision GBG
+
 	* PPQ: Tidy GBG. CR(GBG) ~ 9% better than DR. CR(Granular DR) ~3% better than GBG.
 
 	* PPQ: DR and GBG pass Zen16 quantization checks, GBG significantly more accurate for NSD=1, otherwise comparable
